[project]
name = "pbrl"
version = "1.0.0"
description = "Policy-based Reinforcement Learning"
authors = [
    { name = "Josef Hamelink" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "gym>=0.26.2",
    "torch>=2.7.0",
    "pyyaml>=6.0.2",
    "matplotlib>=3.10.3",
]

[project.scripts]
pbrl-run = "pbrl.cli.run:main"
pbrl-render = "pbrl.cli.render:main"
pbrl-sweep = "pbrl.cli.sweep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
